# CuisineSync

./: .env.example  .gitignore  CLAUDE.md  README.md  TASKS.md  docker-compose.yml
.github/workflows/: deploy.yml
analyse/: README.md  analyse.md  analyse_critique.md
back-end/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
back-end/config/: urls.py
back-end/config/settings/: base.py  local.py  production.py
back-end/recipes/: admin.py  meal_plan_urls.py  models.py  permissions.py  serializers.py  tests.py  units.py  urls.py  views.py
back-end/recipes/fixtures/: initial_recipes.json
back-end/recipes/migrations/: 0001_initial.py  0002_add_mealplan.py  0003_mealplan_ordering.py  0004_recipe_owner.py  0005_add_meal_plan_recipe_through_model.py
back-end/users/: models.py  serializers.py  tests.py  urls.py  views.py
back-end/users/migrations/: 0001_initial.py
front-end/: .env.production  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
front-end/src/: App.jsx  index.css
front-end/src/components/: AddToCartDialog.jsx  BottomNav.jsx  IngredientCombobox.jsx  Logo.jsx  MealPlanItem.jsx  ProtectedRoute.jsx  RecipeCard.jsx  RecipeCardSkeleton.jsx  StepperInput.jsx  StepperInput.test.jsx
front-end/src/data/: recipes.js
front-end/src/hooks/: useServingsEditor.js
front-end/src/lib/: recipeColor.js
front-end/src/pages/: Login.jsx  Login.test.jsx  MealPlan.jsx  NotFound.jsx  RecipeDetail.jsx  RecipeForm.jsx  RecipeForm.test.jsx  RecipeList.jsx  Register.jsx  Register.test.jsx  (+2 more)
nginx/: nginx.conf
(+8 files in other folders)
