[project]
name = "cuisinesync-back"
version = "0.1.0"
description = "CuisineSync — back-end Django"
requires-python = ">=3.11"
dependencies = [
    "Django==4.2.16",
    "djangorestframework==3.15.2",
    "psycopg2-binary==2.9.9",
    "gunicorn==22.0.0",
    "python-decouple==3.8",
    "django-cors-headers==4.4.0",
]
